# fantasy-baseball-log

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.ps1  setup.sh
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/endpoints/: __init__.py  decisions.py  yahoo.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  session.py
backend/app/db/models/: __init__.py  base.py  decision.py
backend/app/db/repositories/: __init__.py  decision_repository.py
backend/app/schemas/: __init__.py  decision.py
backend/app/services/: __init__.py  yahoo.py
data/: draft_results.json
data/2025-03-24/: extracted_data.json  standings.json  teams.json
decisions/waiver-moves/: 2025-03-24-scott-smith-shawver-for-wells-rasmussen.md
dev/frontend-example-scaffold/: index.html  package-lock.json  package.json
dev/frontend-example-scaffold/src/: App.tsx  index.css  main.tsx  (+1 more)
dev/scripts/: yahoo_oauth.experimental.py
docker/: docker-compose.yml
docs/: SPECIFICATION.md
docs/chats/: 2025-03-24.md
docs/decisions/: 2025-03-24.md
frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: analyze_category_trends.py  create_decision_log.py  daily_data_collection.py  find_waiver_opportunities.py  run_analysis.py  schedule_data_collection.py  setup_project.py
templates/: daily-lineup-template.md  draft-analysis-template.md  monthly-review-template.md  trade-analysis-template.md  waiver-move-template.md  weekly-review-template.md
(+7 files in other folders)
