[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fantasy-baseball-api"
version = "0.1.0"
description = "Fantasy Baseball Decision Log API"
readme = "../README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Jimmy Briggs", email = "jimbrig2011@outlook.com" },
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "yahoo-fantasy-api>=2.5.0",
    "yahoo-oauth>=2.0.0",
    "pandas>=1.3.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I"]
ignore = []

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
